# cortex-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  =2.0.0  CLAUDE_SETUP_COMPLETE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  Taskfile.yml  alembic.ini  check-skill  deploy.sh  docker-compose.analytics.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_upload_server.py
.claude/: CLAUDE.md  COMMANDS_AND_AGENTS.md  COMPLETE_FEATURES_README.md  HOOKS_SETUP_COMPLETE.md  INTEGRATION_COMPLETE.md  OPTION_B_IMPLEMENTATION.md  PHASE_1_COMPLETE.md  PHASE_2A_COMPLETE.md  PHASE_2B_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  SKILL_ACTIVATION_GUIDE.md  settings.json
.claude/agents/: api-security-checker.md  orchestration-reviewer.md
.claude/commands/: add-agent.md  add-api-endpoint.md
.claude/hooks/: README.md  debug-hook.sh  file-tracker.sh  manual-skill-check.sh  package-lock.json  package.json  skill-activation-prompt-langfuse.ts  skill-activation-prompt.sh  skill-activation-prompt.ts  test-input.json
.claude/rules/: api.md  architecture.md  memory.md  orchestration.md  rag.md  testing.md
.claude/skills/: skill-rules.json
.claude/skills/api-endpoint/: SKILL.md
.claude/skills/orchestration-dev/: SKILL.md
.claude/skills/rag-query/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  pre-commit.yml  security.yml  test.yml
.task/checksum/: install
alembic/: env.py
alembic/versions/: 001_initial_core_schema.py  dc9f5dc928bd_initial_schema.py
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml
cortex/: __init__.py
cortex/api/: main.py
cortex/api/distributed/: locks.py
cortex/api/middleware/: __init__.py  audit.py  auth.py  metrics.py  rate_limit.py
cortex/api/routes/: __init__.py  accounts.py  agents.py  analytics.py  api_keys.py  audit_logs.py  auth.py  chat.py  chat_extensions.py  documents.py  feature_flags.py  health.py  knowledge.py  models.py  organizations.py  projects.py  prompts.py  skills.py  traces.py  usage.py  webhooks.py  websocket_chat.py
cortex/api/websocket/: auth.py  events.py  manager.py
cortex/core/: __init__.py
cortex/core/agents/: __init__.py  base_agent.py  conversation_manager.py  unified_agent.py
cortex/core/providers/: __init__.py  anthropic.py  llm_provider.py  openai.py  vertex_ai.py
cortex/core/streaming/: __init__.py  stream_writer.py
cortex/orchestration/: __init__.py  agent.py  builder.py  compression.py  config.py  context.py  debug.py  feature_flags.py  http_logging.py  llm.py  local_tool.py  messages.py  observability.py  streaming.py  swarm.py  tools.py  utils.py  validation.py
cortex/orchestration/caching/: __init__.py  anthropic.py  base.py  factory.py  google.py  no_caching.py  openai.py
cortex/orchestration/filesystem/: __init__.py  middleware.py  state.py
cortex/orchestration/intent/: __init__.py  detector.py
cortex/orchestration/mcp/: __init__.py  _session.py  config.py  hybrid_loader.py  loader.py  registry.py  rest_gateway.py
cortex/orchestration/memory/: __init__.py  formatters.py  schema.sql  semantic.py  types.py
cortex/orchestration/middleware/: __init__.py  base.py  built_in.py  memory.py  metrics.py  summarization.py
cortex/orchestration/models/: __init__.py  capabilities.py  health.py  provider_registry.py  router.py
cortex/orchestration/observability/: __init__.py  conversation.py  monitor.py  telemetry.py
cortex/orchestration/safety/: __init__.py  feedback.py  history_dump.py  input_guardrails.py  output_guardrails.py  pii_redaction.py  token_budget.py  trace_sanitizer.py
cortex/orchestration/semantic/: __init__.py  layer.py
cortex/orchestration/services/: __init__.py  registry.py
cortex/orchestration/session/: __init__.py  checkpointer.py  orchestrator.py
cortex/orchestration/skills/: __init__.py  discovery.py  loader.py  middleware.py
cortex/orchestration/ui_actions/: __init__.py  capability_mapper.py  continuation_detector.py  emitter.py  schemas.py
cortex/orchestration/workflow/: __init__.py  phased.py
cortex/platform/: __init__.py
cortex/platform/analytics/: schema.sql  (+1 more)
cortex/prompts/: __init__.py  chat_prompts.py  registry.py
cortex/rag/: __init__.py  cache.py  document.py  embeddings.py  parsers.py  retriever.py  vector_store.py
cortex/tools/: __init__.py  code_executor.py  document_search.py  research.py
deployment/: nginx.conf
deployment/k8s/: api-config.yaml  api-deployment.yaml  api-hpa.yaml  api-ingress.yaml
docs/: CLAUDE_CODE_GUIDE.md  COMPLETION_SUMMARY.md  CONTEXT_ENGINEERING_AND_KNOWLEDGE_GRAPHS.md  EXECUTIVE_BRIEF.md  FILE_UPLOAD_IMPLEMENTATION.md  GRAPHRAG.md  GRAPHRAG_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MEMORY_MIDDLEWARE_IMPLEMENTATION.md  MEMORY_STRATEGY.md  README.md  REASONING_LAYER_ARCHITECTURE.md  SEMANTIC_MEMORY_IMPLEMENTATION.md  prompt-caching-implementation.md
docs/architecture/: DOCUMENT_PROCESSING_ARCHITECTURE.md  ORCHESTRATION_ARCHITECTURE.md  RAG_ARCHITECTURE.md
docs/gnn/: ARCHITECTURE.md  GETTING_STARTED.md  MODELS.md  README.md
docs/guides/: CHAT_API.md  GRAPHRAG.md  MEMORY_STRATEGY.md  PROMPT_CACHING_GUIDE.md  QUICK_START.md  RAG.md  RESEARCH_TOOLS.md
evals/: __init__.py  benchmark.py  metrics.py  replay.py  runner.py
evals/suites/: basic_chat.json
examples/: README.md  advanced_features_demo.py  memory_middleware_demo.py  orchestration_demo.py  platform_demo.py  prompt_caching_demo.py  research_agent_demo.py  semantic_memory_demo.py  simple_chat.py  swarm_demo.py  test_caching.py  test_compression.py  test_graphrag_complete.py  test_graphrag_mvp.py  test_http_logging.py  test_middleware.py  test_rag.py  test_session_persistence.py  test_telemetry.py  test_tool_registry.py  test_validation.py  unified_agent_demo.py
tests/: conftest.py
(+94 files in other folders)
