[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-ai"
version = "0.1.0"
description = "Enterprise-grade AI orchestration platform for multi-agent systems, RAG, and analytics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Srinivasa Rao Gurubelli", email = "sraogurubelli@gmail.com"}
]
maintainers = [
    {name = "Srinivasa Rao Gurubelli", email = "sraogurubelli@gmail.com"}
]
keywords = [
    "ai", "llm", "agents", "multi-agent", "rag", "vector-search",
    "orchestration", "fastapi", "anthropic", "openai", "mcp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",

    # Database & Storage
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",

    # Vector search & Graph database
    "qdrant-client>=1.16.0",
    "neo4j>=5.0.0",

    # Authentication & Security
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",

    # HTTP & Async
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "websockets>=13.0",
    "requests>=2.31.0",

    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
# LLM providers
llm = [
    "anthropic>=0.75.0",
    "openai>=2.3.0",
    "google-cloud-aiplatform>=1.70.0",
]

# Agent orchestration (LangChain/LangGraph)
orchestration = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-swarm>=0.1.0",
]

# Observability
observability = [
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-processor-baggage>=0.49b0",
]

# MCP integration
mcp = [
    "mcp>=1.12.0",
]

# Development tools
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=25.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
    "ipdb>=0.13.0",
]

# All optional dependencies
all = [
    "cortex-ai[llm,orchestration,observability,mcp]",
]

# All dependencies including dev
all-dev = [
    "cortex-ai[all,dev]",
]

[project.urls]
Homepage = "https://github.com/sraogurubelli/cortex-ai"
Documentation = "https://github.com/sraogurubelli/cortex-ai/docs"
Repository = "https://github.com/sraogurubelli/cortex-ai"
Issues = "https://github.com/sraogurubelli/cortex-ai/issues"

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools]
packages = ["cortex", "cortex.core", "cortex.search", "cortex.tools", "cortex.storage", "cortex.api"]

[tool.setuptools.package-data]
cortex = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["B011"]  # assert False

[tool.ruff.lint.isort]
known-first-party = ["cortex"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cortex",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: Async tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage configuration
[tool.coverage.run]
source = ["cortex"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/venv/*",
    "**/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
